fix problem where "hidden" divs sometimes are visible
set background + position absolute on #elm  to help fix issue where ellastic scrolling at bottom of div shows map underneath

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -3,7 +3,7 @@ html {
     background-color: #1D1D1D;
 }
 
-body {
+body, #elm {
     margin: 0px;
     background: #1D1D1D; /* Old browsers */
     background: -moz-linear-gradient(top,  #202527 15%, #1D1D1D 100%); /* FF3.6-15 */
@@ -29,6 +29,11 @@ html, body, body > div {
     display: flex;
     flex-direction: column;
     height: 100%;
+}
+
+#elm {
+    position: absolute;
+    top: 0;
 }
 .map-container, .search-container {
     z-index: -1;
